--- a/script/data_preparation.ipynb
+++ b/script/data_preparation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/scratch/z3289452/miniconda3/envs/OceanDataScience/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -15,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +52,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +254,7 @@
        "4            NaN              NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +262,7 @@
    "source": [
     "# rawdat = rawdat.loc[:,~rawdat.columns.isin(['START_TIME'])]\n",
     "# rawdat.drop(columns=rawdat.columns[[0,1,3,]])\n",
-    "rawdat = rawdat[['START_TIME', 'PRESSURE', 'TEMPERATURE_VALUE', 'TEMPERATURE_QC_FLAG', 'SALINITY_VALUE', 'SALINITY_QC_FLAG', 'NITRATE_VALUE', 'NITRATE_QC_FLAG', \n",
+    "rawdat = rawdat[['START_TIME','PRESSURE', 'TEMPERATURE_VALUE', 'TEMPERATURE_QC_FLAG', 'SALINITY_VALUE', 'SALINITY_QC_FLAG', 'NITRATE_VALUE', 'NITRATE_QC_FLAG', \n",
     "                 'NITRITE_VALUE', 'NITRITE_QC_FLAG', 'OXYGEN_VALUE', 'OXYGEN_QC_FLAG', 'PHOSPHATE_VALUE', 'PHOSPHATE_QC_FLAG', 'SILICATE_VALUE', 'SILICATE_QC_FLAG', \n",
     "                 'AMMONIA_VALUE', 'AMMONIA_QC_FLAG']]\n",
     "rawdat.head()"
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +461,7 @@
        "4            NaN              NaN  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +677,7 @@
        "4            NaN              NaN  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +715,7 @@
        " (13193, 10))"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +741,7 @@
        " Index: [], (0, 10))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +778,7 @@
        " (12970, 10))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +815,7 @@
        " (13442, 10))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +853,7 @@
        " (8350, 10))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +880,7 @@
        " Index: [], (0, 10))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1073,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1259,7 @@
        "NITRATE_QC_FLAG         0.000     0.000     0.000  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,6 +1269,7 @@
     "stats['NITRATE_VALUE']['mean'] = 0\n",
     "stats['NITRATE_VALUE']['std'] = 1\n",
     "stats = stats.transpose()\n",
+    "nitrate_stats = stats\n",
     "stats"
    ]
   },
@@ -1533,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1718,7 @@
        "OXYGEN_QC_FLAG          0.00     0.00     0.000  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1718,6 +1728,7 @@
     "stats['OXYGEN_VALUE']['mean'] = 0\n",
     "stats['OXYGEN_VALUE']['std'] = 1\n",
     "stats = stats.transpose()\n",
+    "oxygen_stats = stats\n",
     "stats"
    ]
   },
@@ -1876,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2051,7 +2062,7 @@
        "PHOSPHATE_QC_FLAG       0.00     0.000     0.000  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2061,6 +2072,7 @@
     "stats['PHOSPHATE_VALUE']['mean'] = 0\n",
     "stats['PHOSPHATE_VALUE']['std'] = 1\n",
     "stats = stats.transpose()\n",
+    "phosphate_stats = stats\n",
     "stats"
    ]
   },
@@ -2220,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2395,7 +2407,7 @@
        "SILICATE_QC_FLAG        0.0000     0.000     0.000  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2405,6 +2417,7 @@
     "stats['SILICATE_VALUE']['mean'] = 0\n",
     "stats['SILICATE_VALUE']['std'] = 1\n",
     "stats = stats.transpose()\n",
+    "silicate_stats = stats\n",
     "stats"
    ]
   },
@@ -2571,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2619,6 +2632,54 @@
    "source": [
     "pickle_out = open(\"../data/silicate.pickle\", \"wb\")\n",
     "pickle.dump(silicate, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save stats for identical standardisation\n",
+    "pickle_out = open(\"../data/standardisation_nitrate.pickle\", \"wb\")\n",
+    "pickle.dump(nitrate_stats, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save stats for identical standardisation\n",
+    "pickle_out = open(\"../data/standardisation_oxygen.pickle\", \"wb\")\n",
+    "pickle.dump(oxygen_stats, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save stats for identical standardisation\n",
+    "pickle_out = open(\"../data/standardisation_phosphate.pickle\", \"wb\")\n",
+    "pickle.dump(phosphate_stats, pickle_out)\n",
+    "pickle_out.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save stats for identical standardisation\n",
+    "pickle_out = open(\"../data/standardisation_silicate.pickle\", \"wb\")\n",
+    "pickle.dump(silicate_stats, pickle_out)\n",
     "pickle_out.close()"
    ]
   },
