Change loss function to neg loglikelihood in Oxygen_BNN. Created using Colaboratory

--- a/script/Oxygen_BNN.ipynb
+++ b/script/Oxygen_BNN.ipynb
@@ -72,11 +72,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O20dM9k7_WKm",
-        "outputId": "f3f6f556-ba24-49a1-d5a6-c20a3006bde5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O20dM9k7_WKm",
+        "outputId": "f3f6f556-ba24-49a1-d5a6-c20a3006bde5"
       },
       "source": [
         "tf.__version__, tfp.__version__"
@@ -100,12 +100,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SXxPlNmX_WKm",
-        "outputId": "b4c0e29e-d8ed-447f-a7a2-180d3a9d5589",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "id": "SXxPlNmX_WKm",
+        "outputId": "b4c0e29e-d8ed-447f-a7a2-180d3a9d5589"
       },
       "source": [
         "pickle_in = open(\"../data/oxygen.pickle\", \"rb\")\n",
@@ -265,11 +265,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5wXmoq9p_WKn",
-        "outputId": "b631df0b-521c-442f-a2cc-78c0741da4f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5wXmoq9p_WKn",
+        "outputId": "b631df0b-521c-442f-a2cc-78c0741da4f3"
       },
       "source": [
         "# check if there are any GPUs avaialable on Katana\n",
@@ -333,11 +333,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iHZgqqiCDiYV",
-        "outputId": "fdeb8d1c-a037-4010-8e36-710a966d140c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iHZgqqiCDiYV",
+        "outputId": "fdeb8d1c-a037-4010-8e36-710a966d140c"
       },
       "source": [
         "%%timeit -r1 -n1\n",
@@ -434,11 +434,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f6pLLPq6FWxh",
-        "outputId": "620b4e2f-400c-4b87-a250-2002dfdf943d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f6pLLPq6FWxh",
+        "outputId": "620b4e2f-400c-4b87-a250-2002dfdf943d"
       },
       "source": [
         "# test execution time with GPU\n",
@@ -605,11 +605,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4NUBH8NEOdRF",
-        "outputId": "cbc8c1e9-7a24-4c2c-9dcb-b48631a1a1da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4NUBH8NEOdRF",
+        "outputId": "cbc8c1e9-7a24-4c2c-9dcb-b48631a1a1da"
       },
       "source": [
         "# test execution time with GPU\n",
@@ -693,23 +693,29 @@
         "    \n",
         "    optimizer = keras.optimizers.Adam(lr=0.001)\n",
         "    \n",
-        "    model.compile(loss=tf.keras.losses.mean_absolute_percentage_error,\n",
+        "\n",
+        "    # Since the output of the model is a distribution, rather than a point estimate, we use the negative loglikelihood as our loss function to compute \n",
+        "    # how likely to see the true data (targets) from the estimated distribution produced by the model.\n",
+        "    def negative_loglikelihood(targets, estimated_distribution):\n",
+        "      return -estimated_distribution.log_prob(targets)\n",
+        "\n",
+        "    model.compile(loss=negative_loglikelihood,\n",
         "                 optimizer=optimizer,\n",
         "                 metrics=['mae', 'mse', keras.metrics.MeanAbsolutePercentageError()])\n",
         "    \n",
         "    return model"
       ],
-      "execution_count": 33,
+      "execution_count": 35,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VQaunb_QTN6S",
-        "outputId": "e94211c2-e196-4df1-c53a-27e4e71a2b72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VQaunb_QTN6S",
+        "outputId": "b8c7d506-17b1-4547-ab54-0847ce755d1c"
       },
       "source": [
         "# test execution time with GPU\n",
@@ -739,17 +745,37 @@
         {
           "output_type": "stream",
           "text": [
-            "loss: 98.9364, val_loss: 97.6537\n",
-            "..........loss: 14.5114, val_loss: 14.1005\n",
-            "..........loss:  8.8985, val_loss:  9.0240\n",
-            "..........loss:  7.5959, val_loss:  7.8728\n",
-            "..........loss:  7.0633, val_loss:  7.4068\n",
-            "..........loss:  7.1069, val_loss:  7.2906\n",
-            "..........loss:  6.9427, val_loss:  7.1031\n",
-            "..........loss:  6.9552, val_loss:  7.1949\n",
-            "..........loss:  6.9351, val_loss:  7.1363\n",
-            "..........loss:  6.8581, val_loss:  7.1123\n",
-            "..........loss:  6.8160, val_loss:  7.1264\n",
+            "loss: 6960.4941, val_loss: 3338.0225\n",
+            "..........loss: 179.6269, val_loss: 169.4344\n",
+            "..........loss: 44.5885, val_loss: 41.8655\n",
+            "..........loss: 16.4340, val_loss: 15.8257\n",
+            "..........loss:  7.1404, val_loss:  6.9729\n",
+            "..........loss:  5.6420, val_loss:  5.6754\n",
+            "..........loss:  5.4265, val_loss:  5.4611\n",
+            "..........loss:  5.2468, val_loss:  5.2402\n",
+            "..........loss:  5.0128, val_loss:  4.9334\n",
+            "..........loss:  4.7440, val_loss:  4.7417\n",
+            "..........loss:  4.5899, val_loss:  4.6453\n",
+            "..........loss:  4.5364, val_loss:  4.5747\n",
+            "..........loss:  4.4808, val_loss:  4.5637\n",
+            "..........loss:  4.5174, val_loss:  4.5146\n",
+            "..........loss:  4.4410, val_loss:  4.7775\n",
+            "..........loss:  4.4299, val_loss:  4.4769\n",
+            "..........loss:  4.4256, val_loss:  4.4461\n",
+            "..........loss:  4.4191, val_loss:  4.4533\n",
+            "..........loss:  4.4257, val_loss:  4.4109\n",
+            "..........loss:  4.3628, val_loss:  4.4345\n",
+            "..........loss:  4.3734, val_loss:  4.4246\n",
+            "..........loss:  4.3612, val_loss:  4.4099\n",
+            "..........loss:  4.3216, val_loss:  4.3876\n",
+            "..........loss:  4.3281, val_loss:  4.4062\n",
+            "..........loss:  4.3028, val_loss:  4.4303\n",
+            "..........loss:  4.3025, val_loss:  4.3515\n",
+            "..........loss:  4.2927, val_loss:  4.3750\n",
+            "..........loss:  4.3038, val_loss:  4.3114\n",
+            "..........loss:  4.2836, val_loss:  4.3183\n",
+            "..........loss:  4.2858, val_loss:  4.3693\n",
+            "..........loss:  4.2663, val_loss:  4.4855\n",
             "....."
           ],
           "name": "stdout"
